# powerbi-server

./: .gitignore  INSTALL.md  README.md  Setup_SARA.bat  config.example.json  install.bat  pyproject.toml  requirements.txt  run.bat  run_source.bat  sara_mcp_legacy_backup.py
src/sara_powerbi/: connection.py  server.py
src/sara_powerbi/tools/: pbir.py  tom.py
ui/: briefing.html
